// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicPure component match expected snapshot with parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className=""
        reverse={false}
      >
        <withStyles(ColumnPure)
          className=""
          lg={9}
          lgOffset=""
          md={7}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(RowPure)
            className="default-Topic-centerRow"
            reverse={false}
          >
            <withStyles(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <withStyles(RowPure)
                className=""
                reverse={false}
              >
                <withStyles(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <withStyles(LinkPure)
                    className="default-Topic-titleStyle"
                    style={Object {}}
                    to="/Topic/1"
                  >
                    Как деактивировать бомбу
                  </withStyles(LinkPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
              <withStyles(RowPure)
                className="default-Topic-textSmallMd"
                reverse={false}
              >
                <withStyles(ColumnPure)
                  className=""
                  lg={12}
                  lgOffset=""
                  md={7}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <span
                    className="default-Topic-parentForumWrapper"
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 25,
                          "value": "Forum:",
                        }
                      }
                      untermedPostfix=":"
                    />
                    <withStyles(LinkPure)
                      className="default-Topic-parentForumTitleStyle"
                      style={Object {}}
                      to="/Forum/10"
                    >
                      Общие вопросы
                    </withStyles(LinkPure)>
                  </span>
                </withStyles(ColumnPure)>
                <withStyles(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md={5}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs=""
                  xsOffset=""
                >
                  <withStyles(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    md=""
                    sm="down"
                    xl=""
                    xs=""
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </withStyles(HiddenPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                215
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                1315
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className=""
          lg={3}
          lgOffset=""
          md={5}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(RowPure)
            className="default-Topic-heightFull"
            reverse={false}
          >
            <withStyles(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <withStyles(HiddenPure)
                className=""
                lg="up"
                md=""
                sm=""
                xl=""
                xs=""
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </withStyles(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className=""
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                <withStyles(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  className=""
                  id={4}
                  size={2.5}
                />
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;

exports[`TopicPure component match expected snapshot without parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className=""
        reverse={false}
      >
        <withStyles(ColumnPure)
          className=""
          lg={9}
          lgOffset=""
          md={7}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(RowPure)
            className="default-Topic-centerRow"
            reverse={false}
          >
            <withStyles(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <withStyles(RowPure)
                className=""
                reverse={false}
              >
                <withStyles(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <withStyles(LinkPure)
                    className="default-Topic-titleStyle"
                    style={Object {}}
                    to="/Topic/1"
                  >
                    Как деактивировать бомбу
                  </withStyles(LinkPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
              <withStyles(RowPure)
                className="default-Topic-textSmallMd"
                reverse={false}
              >
                <withStyles(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md={5}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs=""
                  xsOffset=""
                >
                  <withStyles(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    md=""
                    sm="down"
                    xl=""
                    xs=""
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </withStyles(HiddenPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                215
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                1315
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className=""
          lg={3}
          lgOffset=""
          md={5}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(RowPure)
            className="default-Topic-heightFull"
            reverse={false}
          >
            <withStyles(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <withStyles(HiddenPure)
                className=""
                lg="up"
                md=""
                sm=""
                xl=""
                xs=""
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </withStyles(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className=""
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <withStyles(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                <withStyles(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  className=""
                  id={4}
                  size={2.5}
                />
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;
